Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8756

Odd warning about missing qml2puppet

XMLWordPrintable

    • 94011a12f1230719557105e6c5bd979e7e053a25

      1. Start Creator built on Qt 4.8.
        This does not have a qml2puppet since this needs Qt 5.
      2. If needed configure a Kit using Qt 5.
        The used Qt version has it's on qml2puppet in the bin directory.
      3. Create a new Qt Quick 2 UI.
      4. Open the qml-file in Design mode.
        That works.
      5. Drag a Text item onto the UI.
      6. Create a new Qt Quick 1 UI.
        Creator will display a warning that qml2puppet can't be found. This makes no sense to me. Why would I care about qml2puppet when opening a Qt Quick 1 UI?

        For Gerrit Dashboard: QTCREATORBUG-8756
        # Subject Branch Project Status CR V

            thohartm Thomas Hartmann
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes